<resources>
    <string name="app_name">Register and Login</string>
    <string name="login">Login</string>
    <string name="loginbutton">Login</string>
    <string name="click_here_to_singup">Click here to singup</string>
    <string name="password">Password</string>
    <string name="image">Image</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="go_back">Go Back</string>
    <string name="registerbutton">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="imageAdd">ImageAdd</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
</resources>